backend/src/main/java/com/example/petfinder/error/exception/conflict/UsernameConflictException.java
package com.example.petfinder.error.exception.conflict;

public class UsernameConflictException extends RuntimeException{

    public UsernameConflictException(String username){
        super("Username " + username + " exist");
    }
}
